- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.9.7, 5.10.1, 5.11.3, 5.12.0
 
- 
        2a8fe8d59c80b0f3d0dfea9fb2b8526505d03e24
 
Passing a Component{} to a QQuickItem * property in QML succeeds, producing a non-null argument in the setter, for example, or in any other methods expecting a QQuickItem *.
The argument is however invalid, and this will cause a crash.
- relates to
 - 
                    
QTBUG-61509 Component as source of a MapQuickItem crashes
-         
 - Closed
 
 -