Fix crash when assigning a Component to MapQuickItem.sourceItem

This workaround is currently needed until QTBUG-72930 gets fixed in
qtdeclarative.

Change-Id: Id75fa2048dd6e012c99f61cdc07cfedbe8c6bf83
Fixes: QTBUG-61509
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>